<resources>
    <string name="app_name">ThirdProject</string>
    <string name="login">Input login</string>
    <string name="email">Email</string>
    <string name="phone">Input phone</string>
    <string name="send">Send</string>
    <string name="email_not_valid">Email can\'t be empty.</string>
    <string name="login_not_valid">login can\'t be empty</string>
    <string name="phone_not_valid">Phone not valid</string>
    <string name="password_not_valid">Not valid password</string>
    <string name="validate_confirm">validate confirm</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password confirm</string>
</resources>
