<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/login"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/email"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_below="@+id/login"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_below="@+id/email"
        android:maxLines="1"
        android:inputType="phone"
        android:hint="@string/phone" />

    <EditText
        android:id="@+id/password"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_below="@+id/phone"
        android:maxLines="1"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/password_confirm"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_below="@+id/password"
        android:maxLines="1"
        android:inputType="textPassword"
        android:hint="@string/password_confirm" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/password_confirm"
        android:textSize="30sp" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        android:text="@string/send" />

</RelativeLayout>
